/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "tajo.catalog";
option java_outer_classname = "CatalogProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

import "yarn_protos.proto";
import "tajo_protos.proto";
import "TajoIdProtos.proto";
import "CatalogProtos.proto";
import "PrimitiveProtos.proto";

service CatalogProtocolService {
  rpc getTableDesc(StringProto) returns (TableDescProto);
  rpc getAllTableNames(NullProto) returns (GetAllTableNamesResponse);
  rpc getFunctions(NullProto) returns (GetFunctionsResponse);
  rpc addTable(TableDescProto) returns (BoolProto);
  rpc deleteTable(StringProto) returns (BoolProto);
  rpc existsTable(StringProto) returns (BoolProto);
  rpc addIndex(IndexDescProto) returns (BoolProto);
  rpc existIndexByName(StringProto) returns (BoolProto);
  rpc existIndex(GetIndexRequest) returns (BoolProto);
  rpc getIndexByName(StringProto) returns (IndexDescProto);
  rpc getIndex(GetIndexRequest) returns (IndexDescProto);
  rpc delIndex(StringProto) returns (BoolProto);
  rpc registerFunction(FunctionDescProto) returns (BoolProto);
  rpc unregisterFunction(UnregisterFunctionRequest) returns (BoolProto);
  rpc getFunctionMeta(GetFunctionMetaRequest) returns (FunctionDescProto);
  rpc containFunction(ContainFunctionRequest) returns (BoolProto);
}